multi-container-application/k8s-manifests/Ingress/ingress-service-gce.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hello-svc.lab.innovorder.io
spec:
  rules:
   - http:
      paths:
      - pathType: ImplementationSpecific
        path: /*
        backend:
          service:
            name: client-service
            port: 
              number: 3000
      - pathType: ImplementationSpecific
        path: /api/*
        backend:
          service:
            name: server-service
            port:
              number: 5000
